--- a/BracketSim/BracketSim.csproj
+++ b/BracketSim/BracketSim.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Bracket.Designer.cs">
       <DependentUpon>Bracket.cs</DependentUpon>
     </Compile>
+    <Compile Include="Game.cs" />
     <Compile Include="League.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
